--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -35,7 +35,8 @@
 
   "product-price":{
     "props":{
-      "showSavings": true
+      "showSavings": true,
+      "showListPrice": true
     }
   }
 }
