--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -20,8 +20,7 @@
       "search-fetch-previous",
       "search-content",
       "filter-navigator.v3",
-      "search-fetch-more",
-      "search-products-count-per-page"
+      "search-fetch-more"
     ]
  },
 
