--- a/store/routes.jsonc
+++ b/store/routes.jsonc
@@ -1,5 +1,5 @@
 {
     "store.custom#about-us": {
-      "path": "/about-us"
+      "path": "vincenzocontetraining--reply.myvtex.com/about-us"
     }
 }
